--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
 <!-- Scripts 
   -------------------------------------------------- -->
-  <script>js\MagikPuddle.js</script>
+  <script>MagikPuddle.js</script>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
