--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <h4>MeatShifter</h4>
+        <p>Thank you for stopping by to check out my work. 
+          If you have any questions or comments please dont 
+          hesitate to reach out to us on any of our platforms 
+          <a href="">here.</a></a></p>
       </div>
     </div>
   </div>
