--- a/index.html
+++ b/index.html
@@ -1,53 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Your page title here :)</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+        <!-- Basic Page Needs
+                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <meta charset="utf-8">
+        <title>MagikPuddle</title>
+        <meta name="description" content="">
+        <meta
+        name="author" content="">
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Mobile Specific Metas
+                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <meta
+        name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+        <!-- FONT
+                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link
+        href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/MagikPuddle.css">
+        <!-- CSS
+                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/skeleton.css">
+        <link rel="stylesheet" href="css/MagikPuddle.css">
+        <link
+        rel="stylesheet" href="css/social-icons.css">
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+        <!-- Favicon
+                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link rel="icon" type="image/png" href="images/favicon.png">
 
-</head>
-<body>
+    </head>
+    <body>
+        <header>
+            <div class="banner">
+                <div class="menu" id="menu">
+                    <a class="menu" href="#home">
+                        <i class="fas fa-igloo"></i>
+                    </a>
+                    <a class="menu" href="https://github.com/bur-buru/magicpuddle" target="blank">
+                        <i class="fab fa-github-alt"></i>
+                    </a>
+                    <a class="menu" href="#projects">
+                        <i class="fab fa-app-store-ios"></i>
+                    </a>
+                    <a class="menu" href="https://github.com/bur-buru/magicpuddle/wiki" target="blank">
+                        <i class="fab fa-wikipedia-w"></i>
+                    </a>
+                    <a class="menu" href="#media">
+                        <i class="fas fa-photo-video"></i>
+                    </a>
+                    <a class="menu" href="#contact">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                </div>
+                <div class="logo">
+                    <p class="p-logo">
+                        <img src="images/big-MagikPuddle Logo.png">
+                    </p>
+                </div>
+            </div>
+        </header>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>MeatShifter</h4>
-        <p>Thank you for stopping by to check out my work. 
-          If you have any questions or comments please dont 
-          hesitate to reach out to us on any of our platforms 
-          <a href="">here.</a></a></p>
-      </div>
-    </div>
-  </div>
-  
-<!-- Scripts 
-  -------------------------------------------------- -->
-  <script>MagikPuddle.js</script>
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
+        <!-- Primary Page Layout
+                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <div class="container">
+            <div class="row">
+                <div class="one-half column" style="margin-top: 25%">
+                    <h4>MeatShifter</h4>
+                    <p>Thank you for stopping by to check out my work. 
+                                                          If you have any questions or comments please dont 
+                                                          hesitate to reach out to us on any of our platforms
+                        <a href="">here.</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Scripts 
+                  -------------------------------------------------- -->
+        <script src="js/MagikPuddle.js"></script>
+        <script src="https://kit.fontawesome.com/84000ae34f.js" crossorigin="anonymous"></script>
+
+        <!-- Netlify Search -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.css"/>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.js"></script>
+        <script type="text/javascript">
+            algoliasearchNetlify({
+                appId: 'IDVDKVVKPG',
+                apiKey: '<YOUR_ALGOLIA_SEARCH_API_KEY>',
+                siteId: 'd8ab5e0a-1a56-4df3-8fa3-32d40aad2d55',
+                branch: 'main',
+                selector: 'div#search'
+            });
+        </script>
+
+        <!-- End Document
+                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    </body>
 </html>
