fixed some formmatin

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 
         <!-- Basic Page Needs
-                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8">
         <title>MagikPuddle</title>
         <meta name="description" content="">
@@ -11,17 +11,17 @@
         name="author" content="">
 
         <!-- Mobile Specific Metas
-                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta
         name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- FONT
-                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link
         href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
         <!-- CSS
-                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/skeleton.css">
         <link rel="stylesheet" href="css/MagikPuddle.css">
@@ -29,7 +29,7 @@
         rel="stylesheet" href="css/social-icons.css">
 
         <!-- Favicon
-                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="icon" type="image/png" href="images/favicon.png">
 
     </head>
@@ -65,22 +65,20 @@
         </header>
 
         <!-- Primary Page Layout
-                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <div class="container">
             <div class="row">
                 <div class="one-half column" style="margin-top: 25%">
                     <h4>MeatShifter</h4>
-                    <p>Thank you for stopping by to check out my work. 
-                                                          If you have any questions or comments please dont 
-                                                          hesitate to reach out to us on any of our platforms
-                        <a href="">here.</a>
+                    <p>Thank you for stopping by to check out my work. If you have any questions or comments please dont hesitate to reach out to us on any of our platforms<a href="">
+                            here.</a>
                     </p>
                 </div>
             </div>
         </div>
 
         <!-- Scripts 
-                  -------------------------------------------------- -->
+                          -------------------------------------------------- -->
         <script src="js/MagikPuddle.js"></script>
         <script src="https://kit.fontawesome.com/84000ae34f.js" crossorigin="anonymous"></script>
 
@@ -98,6 +96,6 @@
         </script>
 
         <!-- End Document
-                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     </body>
 </html>
