--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                           –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/skeleton.css">
+        <link rel="stylesheet" href="css/social-icons.css">
+        <link rel="stylesheet" href="css/menu.css">
         <link rel="stylesheet" href="css/MagikPuddle.css">
-        <link
-        rel="stylesheet" href="css/social-icons.css">
+        
 
         <!-- Favicon
                           –––––––––––––––––––––––––––––––––––––––––––––––––– -->
