Added media page

--- a/media.html
+++ b/media.html
@@ -4,25 +4,25 @@
     <head>
 
         <!-- Basic Page Needs
-                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8">
         <title>MagikPuddle</title>
-        <meta name="description" content="Content Creator">
+        <meta name="description" content="">
         <meta
-        name="author" content="MeatShifter">
+        name="author" content="">
 
         <!-- Mobile Specific Metas
-                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta
         name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- FONT
-                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link
         href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
         <!-- CSS
-                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/skeleton.css">
         <link rel="stylesheet" href="css/social-icons.css">
@@ -32,7 +32,7 @@
 
 
         <!-- Favicon
-                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="icon" type="image/png" href="images/favicon.png">
 
     </head>
@@ -69,21 +69,39 @@
         </header>
 
         <!-- Primary Page Layout
-                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <div class="container">
             <div class="row">
                 <div class="one-half column" style="margin-top: 25%">
                     <h4>MeatShifter</h4>
-                    <p>Thank you for stopping by to check out my work. If you have any questions or comments please dont
-                                            hesitate to reach out to us on any of our platforms<a href="media.html">
-                            here.</a>
+                    <p>
+                        <div class="media" id="media">
+                            <h1>Media</h1>
+                            <div class="media-links" id="media-links">
+                                <a href="https://twitch.tv/meatshifter33" target="blank">
+                                    <i class="fab fa-twitch"></i>
+                                </a>
+                                <a href="https://discord.gg/MeatShifter" target="blank">
+                                    <i class="fab fa-discord"></i>
+                                </a>
+                                <a href="https://youtube.com/MeatShifter" target="blank">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                                <a href="https://twitter.com/MeatShifter" target="blank">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="https://instagram.com/MeatShifter" target="blank">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </div>
+                        </div>
                     </p>
                 </div>
             </div>
         </div>
 
         <!-- Scripts 
-                                          -------------------------------------------------- -->
+                                                  -------------------------------------------------- -->
         <script src="js/MagikPuddle.js"></script>
         <script src="https://kit.fontawesome.com/84000ae34f.js" crossorigin="anonymous"></script>
 
@@ -101,7 +119,7 @@
         </script>
 
         <!-- End Document
-                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     </body>
 
 </html>
