minor changes in formatting

--- a/media.html
+++ b/media.html
@@ -4,7 +4,7 @@
     <head>
 
         <!-- Basic Page Needs
-                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8">
         <title>MagikPuddle</title>
         <meta name="description" content="">
@@ -12,27 +12,26 @@
         name="author" content="">
 
         <!-- Mobile Specific Metas
-                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta
         name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- FONT
-                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link
-        href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+                                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Source+Sans+Pro&display=swap" rel="stylesheet">
+        <!-- <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
 
         <!-- CSS
-                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link rel="stylesheet" href="css/normalize.css">
+                                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link rel="stylesheet" href="css/normalize.css"> 
         <link rel="stylesheet" href="css/skeleton.css">
         <link rel="stylesheet" href="css/social-icons.css">
         <link rel="stylesheet" href="css/menu.css">
-        <link
-        rel="stylesheet" href="css/MagikPuddle.css">
+        <link rel="stylesheet" href="css/MagikPuddle.css">
 
 
         <!-- Favicon
-                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="icon" type="image/png" href="images/favicon.png">
 
     </head>
@@ -69,7 +68,7 @@
         </header>
 
         <!-- Primary Page Layout
-                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <div class="container">
             <div class="row">
                 <div class="one-half column" style="margin-top: 25%">
@@ -81,7 +80,7 @@
                                 <a href="https://twitch.tv/meatshifter33" target="blank">
                                     <i class="fab fa-twitch"></i>
                                 </a>
-                                <a href="https://discord.gg/MeatShifter" target="blank">
+                                <a href="https://discord.gg/Pf52Rqg2ZZ" target="blank">
                                     <i class="fab fa-discord"></i>
                                 </a>
                                 <a href="https://youtube.com/MeatShifter" target="blank">
@@ -101,7 +100,7 @@
         </div>
 
         <!-- Scripts 
-                                                  -------------------------------------------------- -->
+                                                          -------------------------------------------------- -->
         <script src="js/MagikPuddle.js"></script>
         <script src="https://kit.fontawesome.com/84000ae34f.js" crossorigin="anonymous"></script>
 
@@ -119,7 +118,7 @@
         </script>
 
         <!-- End Document
-                                                  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+                                                          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     </body>
 
 </html>
