--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
         <!-- FONT
                                                           –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link
-        href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Source+Sans+Pro&display=swap" rel="stylesheet">
+        <!-- <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
+
 
         <!-- CSS
                                                           –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -27,8 +28,7 @@
         <link rel="stylesheet" href="css/skeleton.css">
         <link rel="stylesheet" href="css/social-icons.css">
         <link rel="stylesheet" href="css/menu.css">
-        <link
-        rel="stylesheet" href="css/MagikPuddle.css">
+        <link rel="stylesheet" href="css/MagikPuddle.css">
 
 
         <!-- Favicon
@@ -53,7 +53,7 @@
                     <a class="menu" href="https://github.com/MeatShifter/magikpuddle/wiki" target="blank">
                         <i class="fab fa-wikipedia-w"></i>
                     </a>
-                    <a class="menu" href="#media">
+                    <a class="menu" href="media.html">
                         <i class="fas fa-photo-video"></i>
                     </a>
                     <a class="menu" href="#contact">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="logo">
                     <p class="p-logo">
-                        <img src="images/big-MagikPuddle Logo.png">
+                        <p>MagikPuddle</p>
                     </p>
                 </div>
             </div>
