removed large img

--- a/media.html
+++ b/media.html
@@ -52,7 +52,7 @@
                     <a class="menu" href="https://github.com/MeatShifter/magikpuddle/wiki" target="blank">
                         <i class="fab fa-wikipedia-w"></i>
                     </a>
-                    <a class="menu" href="#media">
+                    <a class="menu" href="media.html">
                         <i class="fas fa-photo-video"></i>
                     </a>
                     <a class="menu" href="#contact">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="logo">
                     <p class="p-logo">
-                        <img src="images/big-MagikPuddle Logo.png">
+                        <p>MagikPuddle</p>
                     </p>
                 </div>
             </div>
